image capture mode is enabled

--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -20,7 +20,9 @@
         android:id="@+id/SplashScreenImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/farm_logo"
+        android:paddingRight="20dip"
+        android:paddingLeft="20dip"
+        android:src="@drawable/krushi_logos"
         android:layout_centerInParent="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
