--- a/src/main/res/layout/activity_complaint_registration.xml
+++ b/src/main/res/layout/activity_complaint_registration.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/list_color"
     tools:context=".ComplaintRegistrationActivity">
-
+    <ProgressBar
+        android:foregroundGravity="center_horizontal|center"
+        android:id="@+id/progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        style="?android:attr/progressBarStyle"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
     <RelativeLayout
         android:id="@+id/linearTop"
         android:layout_width="match_parent"
@@ -36,7 +45,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_border"
+
             android:clipToOutline="true"
             android:contentDescription="Our Image" />
 
@@ -153,12 +162,17 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+
             android:background="@drawable/rounded_border">
 
             <EditText
+                android:id="@+id/commentsText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@null"
                 android:hint="Add comments here" />
         </RelativeLayout>
@@ -246,7 +260,7 @@
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/ic_stop"
                     android:tooltipText="Stop"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/label_stop_recording"
@@ -256,15 +270,19 @@
                     android:layout_marginLeft="10dp"
                     android:text="@string/record_stop"
                     android:textColor="@color/black"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
             </RelativeLayout>
         </LinearLayout>
 
         <Button
+            android:id="@+id/submitButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="Submit">
 
         </Button>
