--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/list_color"
+    android:background="@color/white"
     tools:context=".login.LoginActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/appbar_layout_title"
         android:theme="@style/Theme.FarmGuru.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -17,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:visibility="gone"
             app:popupTheme="@style/Theme.FarmGuru.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -26,10 +28,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="?android:attr/progressBarStyle"
+        android:indeterminateDrawable="@drawable/custom_rotate"
         android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:layout_gravity="center"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dip"
+        android:layout_below="@id/appbar_layout_title"
+        android:background="@drawable/krushi_logos"
+        android:paddingBottom="50dip">
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/email"
-            android:text=""
+            android:text="amit"
             android:inputType="text"
             android:minHeight="48dp" />
 
@@ -60,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="@string/passWord"
-            android:text=""
+            android:text="amit2022"
             android:inputType="textPassword"
             android:minHeight="48dp" />
 
@@ -69,10 +81,22 @@
             android:id="@+id/btnLinkToLogIn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:background="@null"
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
-            android:textSize="15dp"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnLinkToSignup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:text="@string/label_signup"
+            android:textAllCaps="false"
+            android:gravity="center"
+            android:textSize="18sp"
             android:textColor="@color/white"
             android:layout_marginTop="15dp"/>
 
@@ -81,4 +105,4 @@
     <!--<include layout="@layout/content_login" />-->
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
