--- a/src/main/res/layout/activity_my_plot_listing.xml
+++ b/src/main/res/layout/activity_my_plot_listing.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="?android:attr/progressBarStyle"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:indeterminateDrawable="@drawable/custom_rotate"        android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:layout_gravity="center"/>
 
