--- a/src/main/res/layout/activity_my_schedule_listing.xml
+++ b/src/main/res/layout/activity_my_schedule_listing.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ui.myplots.MyPlotActivity"
     android:background="@color/list_color">
+  <!--  <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.myplots.MyPlotActivity"
+        android:background="@color/list_color"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">-->
     <ProgressBar
         android:foregroundGravity="center_horizontal|center"
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="?android:attr/progressBarStyle"
+        android:indeterminateDrawable="@drawable/custom_rotate"
         android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:layout_gravity="center"/>
@@ -27,9 +39,22 @@
         android:textColor="@color/black"
         android:visibility="gone"
         android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/schedule_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/no_schedule"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:textSize="20sp"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/plotsListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+      <!--  </RelativeLayout>-->
+    <!--</ScrollView>-->
 </RelativeLayout>
