--- a/src/main/res/layout/activity_questions_listing.xml
+++ b/src/main/res/layout/activity_questions_listing.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="?android:attr/progressBarStyle"
+        android:indeterminateDrawable="@drawable/custom_rotate"
         android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:layout_gravity="center"/>
