--- a/src/main/res/layout/fragment_aboutus.xml
+++ b/src/main/res/layout/fragment_aboutus.xml
@@ -14,7 +14,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:text="@string/about_us_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
