--- a/src/main/res/menu/activity_main_drawer.xml
+++ b/src/main/res/menu/activity_main_drawer.xml
@@ -6,9 +6,9 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic__home"
             android:title="@string/menu_home" />
-        <item
+       <!-- <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
@@ -16,18 +16,18 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
-
+-->
         <item
             android:id="@+id/nav_language"
-            android:icon="@android:drawable/ic_btn_speak_now"
+            android:icon="@drawable/ic_language"
             android:title="@string/menu_language" />
         <item
             android:id="@+id/nav_executive"
-            android:icon="@android:drawable/ic_menu_help"
+            android:icon="@drawable/ic_call"
             android:title="@string/menu_call_helpline" />
         <item
             android:id="@+id/nav_aboutus"
-            android:icon="@android:drawable/ic_menu_view"
+            android:icon="@drawable/ic_about_us"
             android:title="@string/menu_about_us" />
         <item
             android:id="@+id/nav_logout"
