--- a/src/main/res/navigation/mobile_navigation.xml
+++ b/src/main/res/navigation/mobile_navigation.xml
@@ -11,7 +11,7 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
+    <!--<fragment
         android:id="@+id/nav_gallery"
         android:name="com.farms.farmguru.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
@@ -22,7 +22,7 @@
         android:name="com.farms.farmguru.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
-
+-->
     <fragment
         android:id="@+id/nav_language"
         android:name="com.farms.farmguru.ui.language.LanguageFragment"
