--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="list_color">#E8F3C8</color>
     <color name="red_color">#D50000</color>
     <color name="green_color">#00C853</color>
+    <color name="screen_color">#3F6750</color>
+
 </resources>
