schedule view scroll from top

--- a/src/main/res/layout/activity_my_schedule_listing.xml
+++ b/src/main/res/layout/activity_my_schedule_listing.xml
@@ -55,7 +55,7 @@
       android:scrollbars="vertical|horizontal"
       app:transformation="centerInside"
       app:transformationGravity="auto"
-      app:alignment="center"
+      app:alignment="top"
       app:overScrollHorizontal="true"
       app:overScrollVertical="true"
       app:overPinchable="true"
