--- a/src/main/res/layout/diary_schedule_listing_item.xml
+++ b/src/main/res/layout/diary_schedule_listing_item.xml
@@ -22,7 +22,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
-
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/purple_500">
+                <TextView
+                    android:id="@+id/schedule_date_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dip"
+                    android:layout_marginTop="2dip"
+                    android:layout_marginEnd="10dip"
+                    android:layout_marginBottom="2dip"
+                    android:text=""
+                    android:layout_alignParentTop="true"
+                    android:textColor="@color/white" />
+            </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -74,7 +89,7 @@
                     android:layout_below="@id/title_value"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="10dip"
-                    android:layout_marginTop="10dip"
+                    android:layout_marginTop="25dip"
                     android:layout_marginEnd="10dip"
                     android:layout_marginBottom="2dip"
                     android:text="@string/after_pronningdays"
@@ -408,10 +423,11 @@
                     android:layout_marginBottom="2dip"
                     android:text="@string/schedule_date"
                     android:textColor="@color/purple_500"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
 
                 <TextView
-                    android:id="@+id/schedule_date_value"
+                    android:id="@+id/schedule_date_value1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/schedule_date_label"
@@ -421,6 +437,7 @@
                     android:layout_marginEnd="10dip"
                     android:layout_marginBottom="2dip"
                     android:text=""
+                    android:visibility="gone"
                     android:textColor="@color/black" />
 
 
