--- a/src/main/res/layout/activity_notification_listing.xml
+++ b/src/main/res/layout/activity_notification_listing.xml
@@ -17,12 +17,36 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone"
         android:layout_gravity="center"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/plotsListRecyclerView"
+    <com.otaliastudios.zoom.ZoomLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical|horizontal"
+        app:transformation="centerInside"
+        app:transformationGravity="auto"
+        app:alignment="top"
+        app:overScrollHorizontal="true"
+        app:overScrollVertical="true"
+        app:overPinchable="true"
+        app:horizontalPanEnabled="true"
+        app:verticalPanEnabled="true"
+        app:zoomEnabled="true"
+        app:flingEnabled="true"
+        app:scrollEnabled="true"
+        app:oneFingerScrollEnabled="true"
+        app:twoFingersScrollEnabled="true"
+        app:threeFingersScrollEnabled="true"
+        app:minZoom="0.9"
+        app:minZoomType="realZoom"
+        app:maxZoom="5.5"
+        app:maxZoomType="realZoom"
+        app:animationDuration="280"
+        app:hasClickableChildren="false">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/plotsListRecyclerView"
+            android:layout_width="380dip"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    </com.otaliastudios.zoom.ZoomLayout>
 </RelativeLayout>
