--- a/src/main/res/layout/activity_register_crops.xml
+++ b/src/main/res/layout/activity_register_crops.xml
@@ -505,6 +505,7 @@
                     android:layout_margin="10dp"
                     android:background="@null"
                     android:minHeight="48dp"
+                    android:inputType="numberDecimal"
                     tools:ignore="SpeakableTextPresentCheck" />
             </LinearLayout>
 
